--- a/composer.json
+++ b/composer.json
@@ -97,16 +97,17 @@
             ]
         }
     },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "php-http/discovery": true,
-            "wikimedia/composer-merge-plugin": true
-        }
+   "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "allow-plugins": {
+        "pestphp/pest-plugin": true,
+        "php-http/discovery": true,
+        "wikimedia/composer-merge-plugin": true
     },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+    "platform": {
+        "php": "8.3.12"
+    }
+}
 }
